javadocs and simple trading (no trading)